src/snapshots/jjpwrgem__cli__tests__object_missing_colon_with_leading_whitespace.snap
---
source: src/cli.rs
expression: annotated
---
error: expected colon after key, found no significant characters
 --> stdin:1:7
  |
1 |   {"hi"    
  |    ---^
  |    |
  |    expected due to `"hi"`
  |
help: insert colon, placeholder value, and closing curly brace
  |
1 |   {"hi": "garlic bread" }    
  |        ++++++++++++++++++
